[gd_scene load_steps=12 format=2]

[ext_resource path="res://ui/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://ui/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/fonts/averia/Averia-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ui/options_menu.gd" type="Script" id=4]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:show_behind_parent")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.223529 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:show_behind_parent")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=7]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.223529 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:show_behind_parent")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:show_behind_parent")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.223529 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:show_behind_parent")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.223529 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:show_behind_parent")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[node name="pause_menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="background" type="Panel" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="foreground" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 150.0
margin_right = -40.0
margin_bottom = -50.0

[node name="main_menu" type="VBoxContainer" parent="foreground"]
margin_right = 250.0
margin_bottom = 520.0
rect_min_size = Vector2( 250, 0 )
custom_constants/separation = 40

[node name="AnimationPlayer" type="AnimationPlayer" parent="foreground/main_menu"]
anims/RESET = SubResource( 5 )
anims/fade_in = SubResource( 6 )
anims/fade_out = SubResource( 7 )

[node name="resume" type="Button" parent="foreground/main_menu"]
margin_right = 250.0
margin_bottom = 28.0
text = "Resume"

[node name="reload" type="Button" parent="foreground/main_menu"]
visible = false
margin_top = 68.0
margin_right = 250.0
margin_bottom = 96.0
text = "Return to Checkpoint"

[node name="options" type="Button" parent="foreground/main_menu"]
margin_top = 68.0
margin_right = 250.0
margin_bottom = 96.0
text = "Options"

[node name="quit" type="Button" parent="foreground/main_menu"]
margin_top = 136.0
margin_right = 250.0
margin_bottom = 164.0
text = "Save and Quit"

[node name="mainOptions" type="VBoxContainer" parent="foreground"]
margin_left = 254.0
margin_right = 504.0
margin_bottom = 520.0
rect_min_size = Vector2( 250, 0 )
custom_constants/separation = 40

[node name="audio" type="Button" parent="foreground/mainOptions"]
margin_right = 250.0
margin_bottom = 28.0
focus_neighbour_left = NodePath(".")
text = "Audio"

[node name="controls" type="Button" parent="foreground/mainOptions"]
margin_top = 68.0
margin_right = 250.0
margin_bottom = 96.0
focus_neighbour_left = NodePath(".")
text = "Controls"

[node name="display" type="Button" parent="foreground/mainOptions"]
margin_top = 136.0
margin_right = 250.0
margin_bottom = 164.0
focus_neighbour_left = NodePath(".")
text = "Display"

[node name="graphics" type="Button" parent="foreground/mainOptions"]
margin_top = 204.0
margin_right = 250.0
margin_bottom = 232.0
text = "Graphics"

[node name="back" type="Button" parent="foreground/mainOptions"]
margin_top = 272.0
margin_right = 250.0
margin_bottom = 300.0
text = "Back"

[node name="AnimationPlayer" type="AnimationPlayer" parent="foreground/mainOptions"]
anims/RESET = SubResource( 2 )
anims/fade_in = SubResource( 3 )
anims/fade_out = SubResource( 4 )

[node name="audioOptions" type="VBoxContainer" parent="foreground"]
visible = false
margin_left = 254.0
margin_right = 654.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 0 )
custom_constants/separation = 40
script = ExtResource( 4 )
menu_name = "Audio"

[node name="controlOptions" type="VBoxContainer" parent="foreground"]
visible = false
margin_left = 254.0
margin_right = 654.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 0 )
custom_constants/separation = 40
script = ExtResource( 4 )
menu_name = "Controls"

[node name="displayOptions" type="VBoxContainer" parent="foreground"]
visible = false
margin_left = 658.0
margin_right = 1058.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 0 )
custom_constants/separation = 40
script = ExtResource( 4 )
menu_name = "Display"

[node name="graphicsOptions" type="VBoxContainer" parent="foreground"]
visible = false
margin_left = 508.0
margin_right = 508.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 0 )
custom_constants/separation = 40
script = ExtResource( 4 )
menu_name = "Graphics"

[node name="Label" type="Label" parent="."]
margin_left = 48.0
margin_top = 83.0
margin_right = 151.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 1 )
text = "Paused"

[connection signal="pressed" from="foreground/main_menu/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="foreground/main_menu/reload" to="." method="_on_reload_pressed"]
[connection signal="pressed" from="foreground/main_menu/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="foreground/main_menu/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="foreground/mainOptions/audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="foreground/mainOptions/controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="foreground/mainOptions/display" to="." method="_on_display_pressed"]
[connection signal="pressed" from="foreground/mainOptions/graphics" to="." method="_on_graphics_pressed"]
[connection signal="pressed" from="foreground/mainOptions/back" to="." method="_on_back_pressed"]
[connection signal="back_pressed" from="foreground/audioOptions" to="." method="_on_back_pressed"]
[connection signal="back_pressed" from="foreground/controlOptions" to="." method="_on_back_pressed"]
[connection signal="back_pressed" from="foreground/displayOptions" to="." method="_on_back_pressed"]
[connection signal="ui_redraw" from="foreground/displayOptions" to="." method="_on_displayOptions_ui_redraw"]
[connection signal="back_pressed" from="foreground/graphicsOptions" to="." method="_on_back_pressed"]
